--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="https://banner2.cleanpng.com/20180329/ryq/kisspng-web-development-logo-clip-art-website-5abd34c36a2889.5148891915223492514348.jpg" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
