test barra separazione

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 <!-- end work -->  
 
-<!-- barra di divisione tra lavoro e studio --> 
+<!-- barra di divisione tra lavoro e studio  
 
 
 
@@ -308,9 +308,9 @@
 
             </div>
 
-        </div> <!-- end cta -->
+        </div> 
         
-  </section>
+  </section>--> 
 
 <!--fine barra di divisione tra lavoro e studio --> 
 
