--- a/index.html
+++ b/index.html
@@ -819,14 +819,14 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-                <form name="contactForm" id="contactForm" method="post" action="https://formspree.io/davide.giagnacovo@gmail.com">
+                <form name="contactForm" id="contactForm" method="POST" action="https://formspree.io/davide.giagnacovo@gmail.com">
                     <fieldset>
     
                     <div class="form-field">
                         <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
+                        <input name="_replyto" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
                         <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
