test email in basso

--- a/index.html
+++ b/index.html
@@ -979,6 +979,28 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
+
+<form
+  action="https://formspree.io/davide.giagnacovo@gmail.com"
+  method="POST"
+>
+  <label>
+    Your Name:
+    <input type="text" name="name">
+  </label>
+  <label>
+    Your Email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Message:
+    <textarea name="message"></textarea>
+  </label>
+  <input type="submit" value="Send">
+</form>
+
+
+
 </body>
 
 </html>
