in alto nella sezione form

--- a/index.html
+++ b/index.html
@@ -819,6 +819,26 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
+
+<form
+  action="https://formspree.io/davide.giagnacovo@gmail.com"
+  method="POST"
+>
+  <label>
+    Your Name:
+    <input type="text" name="name">
+  </label>
+  <label>
+    Your Email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Message:
+    <textarea name="message"></textarea>
+  </label>
+  <input type="submit" value="Send">
+</form>
+
                 <form name="contactForm" id="contactForm" method="POST" action="https://formspree.io/davide.giagnacovo@gmail.com">
                     <fieldset>
     
@@ -835,7 +855,7 @@
                         <textarea name="Message" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
                     <div class="form-field">
-                        <button class="full-width btn--primary"input type="submit" value="Send">Submit</button>
+                        <button class="full-width btn--primary">Submit</button>
                         <div class="submit-loader">
                             <div class="text-loader">Sending...</div>
                             <div class="s-loader">
@@ -845,9 +865,9 @@
                             </div>
                         </div>
                     </div>
-    
                     </fieldset>
                 </form>
+
 
                 <!-- contact-warning -->
                 <div class="message-warning">
