--- a/index.html
+++ b/index.html
@@ -839,21 +839,22 @@
   <input type="submit" value="Send">
 </form>
 
-                <form name="contactForm" id="contactForm" method="POST" action="https://formspree.io/davide.giagnacovo@gmail.com">
+                <form name="contactForm" id="contactForm" action="https://formspree.io/davide.giagnacovo@gmail.com" method="POST">
                     <fieldset>
     
                     <div class="form-field">
-                        <input name="Name" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+                        <input name="name" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
                         <input name="_replyto" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="Subject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
+                        <input name="subject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
                     </div>
                     <div class="form-field">
-                        <textarea name="Message" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+                        <textarea name="message" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
+                    <input type="submit" value="Send">
                     <div class="form-field">
                         <button class="full-width btn--primary">Submit</button>
                         <div class="submit-loader">
