--- a/index.html
+++ b/index.html
@@ -819,6 +819,29 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
+
+
+<form
+  action="https://formspree.io/davide.giagnacovo@gmail.com"
+  method="POST"
+>
+  <label>
+    Your Name:
+    <input type="text" name="name">
+  </label>
+  <label>
+    Your Email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Message:
+    <textarea name="message"></textarea>
+  </label>
+  <input type="submit" value="Send">
+</form>
+
+
+
                 <form name="contactForm" id="contactForm" method="post" action="">
                     <fieldset>
     
