--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
   method="POST"
   name="contactForm"
 >
-
+<fieldset>
 
   <label>
     Name:
@@ -842,7 +842,7 @@
   </label>
   <input type="submit" value="Send">
 
-
+</fieldset>
 </form>
 
 
