--- a/index.html
+++ b/index.html
@@ -828,18 +828,24 @@
 >
 <fieldset>
 
+<div class="form-field">
   <label>
     Name:
     <input type="text" name="name">
   </label>
+</div>
+
   <label>
     Email:
     <input type="email" name="_replyto">
   </label>
+
   <label>
     Message:
     <textarea name="message"></textarea>
   </label>
+
+
   <input type="submit" value="Send">
 
 </fieldset>
