--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
 <div class="form-field">
   <label>
     Name:
-    <input type="text" name="name">
+    <input type="text" name="name" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
   </label>
 </div>
 
