--- a/index.html
+++ b/index.html
@@ -835,16 +835,19 @@
   </label>
 </div>
 
+<div class="form-field">
   <label>
-    Email:
-    <input type="email" name="_replyto">
-  </label>
 
+    <input type="email" name="_replyto" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
+  </label>
+</div>
+
+<div class="form-field">
   <label>
-    Message:
-    <textarea name="message"></textarea>
-  </label>
 
+    <textarea name="message" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+  </label>
+</div>
 
   <input type="submit" value="Send">
 
