--- a/index.html
+++ b/index.html
@@ -819,58 +819,21 @@
 
         <div class="row contact__main">
             <div class="col-eight tab-full contact__form">
-
-
-<form
-  action="https://formspree.io/davide.giagnacovo@gmail.com"
-  method="POST"
-  name="contactForm"
->
-<fieldset>
-
-<div class="form-field">
-  <label>
-    
-    <input type="text" name="name" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
-  </label>
-</div>
-
-<div class="form-field">
-  <label>
-
-    <input type="email" name="_replyto" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
-  </label>
-</div>
-
-<div class="form-field">
-  <label>
-
-    <textarea name="message" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
-  </label>
-</div>
-
-  <input type="submit" value="Send">
-
-</fieldset>
-</form>
-
-
-
-                <form name="contactForm" id="contactForm" method="post" action="">
+                <form name="contactForm" id="contactForm" method="post" action="https://script.google.com/macros/s/AKfycbw8Fg6rtyQEKfZQuzXm3jC-tFINM4R0MWd7YBjUNw/exec">
                     <fieldset>
     
                                 <div class="form-field">
-                                    <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+                                    <input name="contactName" type="text" id="name" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
                                 </div>
+
                                 <div class="form-field">
-                                    <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="" aria-required="true" class="full-width">
+                                    <textarea name="contactMessage" id="message" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                                 </div>
+
                                 <div class="form-field">
-                                    <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
+                                    <input name="contactEmail" type="email" id="email" placeholder="Email" value="" required="" aria-required="true" class="full-width">
                                 </div>
-                                <div class="form-field">
-                                    <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
-                                </div>
+
                                 <div class="form-field">
                                     <button class="full-width btn--primary">Submit</button>
                                     <div class="submit-loader">
