--- a/index.html
+++ b/index.html
@@ -823,15 +823,15 @@
                     <fieldset>
     
                                 <div class="form-field">
-                                    <input name="contactName" type="text" id="name" placeholder="Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+                                    <input name="contactName" type="text" id="name" placeholder="Name" value="" minlength="2" aria-required="true" class="full-width">
                                 </div>
 
                                 <div class="form-field">
-                                    <textarea name="contactMessage" id="message" placeholder="message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+                                    <textarea name="contactMessage" id="message" placeholder="message" rows="10" cols="50" aria-required="true" class="full-width"></textarea>
                                 </div>
 
                                 <div class="form-field">
-                                    <input name="contactEmail" type="email" id="email" placeholder="Email" value="" required="" aria-required="true" class="full-width">
+                                    <input name="contactEmail" type="email" id="email" placeholder="Email" value="" aria-required="true" class="full-width">
                                 </div>
 
                                 <div class="form-field">
