ritorno origini pulsante

--- a/index.html
+++ b/index.html
@@ -839,10 +839,10 @@
   </label>
 
   <label>
-    <textarea name="message" placeholder="Message2"></textarea>
+    <textarea name="message" placeholder="Message"></textarea>
   </label>
 
-  <input type="submit" value="Send" class="full-width">
+  <input type="submit" value="Send">
 
 </form>
 
