--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
   </label>
 
   <label>
-    <textarea name="message" placeholder="Message"></textarea>
+    <textarea name="message" placeholder="Message1"></textarea>
   </label>
 
   <input type="submit" value="Send">
