--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <textarea name="message" placeholder="Message1"></textarea>
   </label>
 
-  <input type="submit" value="Send">
+  <input type="submit" value="Send" class="full-width">
 
 </form>
 
