lungezza linea messaggio

--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
   name="contactForm"
 >
   <label>
-    <input type="text" name="name" placeholder="Name">
+    <input type="text" name="name" placeholder="Name" class="full-width">
   </label>
 
   <label>
