tutte le linee dei contatti lunghi

--- a/index.html
+++ b/index.html
@@ -831,15 +831,15 @@
   </label>
 
   <label>
-    <input type="email" name="_replyto" placeholder="Email">
+    <input type="email" name="_replyto" placeholder="Email" class="full-width">
   </label>
 
   <label>
-    <input type="text" name="subject" placeholder="Subject">
+    <input type="text" name="subject" placeholder="Subject" class="full-width">
   </label>
 
   <label>
-    <textarea name="message" placeholder="Message1"></textarea>
+    <textarea name="message" placeholder="Message" class="full-width"></textarea>
   </label>
 
   <input type="submit" value="Send" class="full-width">
