colore rosso numero tel

--- a/index.html
+++ b/index.html
@@ -862,10 +862,9 @@
                     Your message was sent, thank you!<br>
                 </div>
                         
-            </div>
             <div class="col-four tab-full contact__infos">
-                <h4 class="h06">Phone</h4>
-                <p>Phone: (+39) 392 949 3504<br>
+                <h4 class="h06" >Phone</h4>
+                <p><font color="#862121">Phone: (+39) 392 949 3504 </font><br> 
                 </p>
 
                 <h4 class="h06">Email</h4>
