--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
   </label>
 
   <label>
-    <input type="email" name="_replyto" placeholder="Email" class="full-width">
+    <input type="email" name="_replyto" placeholder="Your Email" class="full-width">
   </label>
 
   <label>
