--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
                 <li><a class="smoothscroll"  href="#study" title="study">Study</a></li>
-                <li><a class="smoothscroll"  href="#soft_skills" title="study">Soft Skills</a></li>
+                <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Soft Skills</a></li>
 <!--
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
 -->
 
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+
+                <li><a class="smoothscroll"  href="www.google.it" title="Ita"> <img src="images/Bandiera.png"></a></li>
+
             </ul>
         </nav>
 
