link collegamento sito

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
 
-                <li><a class="smoothscroll"  href="www.google.it" title="Ita"> <img src="images/bandiera.png"></a></li>
+                <li><a href="https://www.sitoita.it" target="_blank" title="Ita"> <img src="images/bandiera.png"></a></li>
 
             </ul>
         </nav>
