aggiornamento codice immagini

--- a/index.html
+++ b/index.html
@@ -382,9 +382,7 @@
 
 <!-- end study -->
 
-    <!-- works
-    ================================================== -->
-    <section id="soft_skills" class="s-works target-section">
+<section id="soft_skills" class="s-works target-section">
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
@@ -429,7 +427,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-sport.jpg" class="thumb-link" title="Sport" data-size="2400x3600">
+                            <a href="images/portfolio/gallery/g-sport.jpg" class="thumb-link" title="Sport" data-size="640x960">
                                 <img src="images/portfolio/sport.jpg" 
                                      srcset="images/portfolio/sport.jpg 1x, images/portfolio/sport@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -457,24 +455,24 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" title="Cooking" data-size="1050x700">
-                                <img src="images/portfolio/salad.jpg" 
-                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Cooking" data-size="1050x700">
+                                <img src="images/portfolio/dog.jpg" 
+                                     srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Food Lover
+                                Animal Lover
                             </h3>
                             <p class="item-folio__cat">
-                                Cooking
+                                Nature
                             </p>
                         </div>
 
                         <span class="item-folio__caption">
-                            <p>Cooking</p>
+                            <p>Nature</p>
                         </span>
 
                     </div> <!-- end item-folio -->
