--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
             </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
-                <p>Phone: (+39) 392 949 3504<br>
+                <p><font color="#862121">Phone: (+39) 392 949 3504<br>
                 </p>
 
                 <h4 class="h06">Email</h4>
