Modifiche più  immagine  bandiera ita

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
 
-                <li><a href="https://www.sitoita.it" target="_blank" title="Ita"> <img src="images/bandiera.png"></a></li>
+                <li><a href="index_ita.html" title="Ita"> <img src="images/bandiera_ita.png"></a></li>
 
             </ul>
         </nav>
@@ -130,7 +130,7 @@
             <div class="col-full text-center">
                 <h3>About</h3>
                 <h1>More About Me</h1>
-                <p class="lead">Creativity, vision, technology, study, web, research, fantasy...<br>Yes I am a Marketing geek.<br>
+                <p class="lead">Creativity, vision, technology, study, web, research, fantasy...<br>Yes, I am a Marketing geek.<br>
                 </p>
             </div>
         </div>
@@ -220,7 +220,7 @@
                                 • Follow up of customers / prospects to achieve commercial objectives;<br>
                                 ▪ Maximization of ROI, through KPI market analysis and SWOT analysis;<br>
                                 ▪ Develop strategic marketing plans and advertising budget management;<br>
-                                ▪ Identification of new trends and business development opportunities
+                                ▪ Identification of new trends and business development opportunities;<br>
                                 ▪ Website SEO analysis (search engine optimization);<br>
                                 • Building long term relationships with customers;<br>
                                 • Team manager for the realization of new projects.</p>
@@ -350,7 +350,7 @@
                             <h5>Uniba - Economics, Management and Business Law</h5>
                         </div>
                         <div class="timeline__desc">    
-                            <p>Degree thesis in Marketing applied to tourism.<br>
+                            <p>Degree thesis in Marketing applied.<br>
                             Thesis title: Tourism and Web Marketing: TripAdvisor Case</p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -641,7 +641,7 @@
                     <p>Davide is a great colleague, he was part of my team at Hitech and together we have been able to turn around some of the key markets. I have rarely seen such an eye for details combined with outstanding creativity. Definitely he’s been one of my best colleague and I hope we’ll work together again in the future.</p>
                     <div class="testimonials__author h06">
                         Maurizio Magno
-                        <span>Busines Consulting B2B, Amicar (Skoda Italy)</span>
+                        <span>Business Consulting B2B, Amicar (Skoda Italy)</span>
                     </div>
                 </div>
 
