--- a/index_ita.html
+++ b/index_ita.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Davide Resume WebSite</title>
+    <title>Davide Sito CV</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -49,7 +49,7 @@
         <nav class="header-nav-wrap">
             <ul class="header-nav">
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">Chi sono</a></li>
+                <li><a class="smoothscroll"  href="#about" title="Chi sono">Chi sono</a></li>
                 <li><a class="smoothscroll"  href="#works" title="works">Lavori</a></li>
                 <li><a class="smoothscroll"  href="#study" title="study">Studi</a></li>
                 <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Soft Skills</a></li>
