--- a/index_ita.html
+++ b/index_ita.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Davide Sito CV</title>
+    <title>Davide-Sito CV</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -50,16 +50,16 @@
             <ul class="header-nav">
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="Chi sono">Chi sono</a></li>
-                <li><a class="smoothscroll"  href="#works" title="works">Lavori</a></li>
-                <li><a class="smoothscroll"  href="#study" title="study">Studi</a></li>
+                <li><a class="smoothscroll"  href="#works" title="Lavori">Lavori</a></li>
+                <li><a class="smoothscroll"  href="#study" title="Studi">Studi</a></li>
                 <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Soft Skills</a></li>
 <!--
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
 -->
 
-                <li><a class="smoothscroll"  href="#contact" title="contact">Contatti</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="contatti">Contatti</a></li>
 
-                <li><a href="index.html" title="Ita"> <img src="images/bandiera_ing.png"></a></li>
+                <li><a href="index.html" title="Ing"> <img src="images/bandiera_ing.png"></a></li>
 
             </ul>
         </nav>
@@ -403,7 +403,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-mechanic.jpg" class="thumb-link" title="Restore" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-mechanic.jpg" class="thumb-link" title="Restaurare" data-size="1050x700">
                                 <img src="images/portfolio/mechanic.jpg" 
                                      srcset="images/portfolio/mechanic.jpg 1x, images/portfolio/mechanic@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -458,7 +458,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Cooking" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Natura" data-size="1050x700">
                                 <img src="images/portfolio/dog.jpg" 
                                      srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -485,7 +485,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-phone.jpg" class="thumb-link" title="Technology" data-size="1868x1788">
+                            <a href="images/portfolio/gallery/g-phone.jpg" class="thumb-link" title="Tecnologia" data-size="1868x1788">
                                 <img src="images/portfolio/phone.jpg"
                                      srcset="images/portfolio/phone.jpg 1x, images/portfolio/phone@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -514,7 +514,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-friends.jpg" class="thumb-link" title="Friendship" data-size="2400x3000">
+                            <a href="images/portfolio/gallery/g-friends.jpg" class="thumb-link" title="Amicizia" data-size="2400x3000">
                                 <img src="images/portfolio/friends.jpg"
                                      srcset="images/portfolio/friends.jpg 1x, images/portfolio/friends@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -543,7 +543,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Travel" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Viaggiare" data-size="1050x700">
                                 <img src="images/portfolio/liberty.jpg"
                                      srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -574,7 +574,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Photography" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Fotografia" data-size="1050x700">
                                 <img src="images/portfolio/shutterbug.jpg"
                                      srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -950,7 +950,7 @@
                 </div>
 
                 <div class="go-top">
-                <a class="smoothscroll" title="Back to Top" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
+                <a class="smoothscroll" title="Tora su" href="#top"><i class="im im-arrow-up" aria-hidden="true"></i></a>
                 </div>
             </div>
 
