--- a/index_ita.html
+++ b/index_ita.html
@@ -48,7 +48,7 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
+                <li class="current"><a class="smoothscroll"  href="#home" title="Home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="Chi sono">Chi sono</a></li>
                 <li><a class="smoothscroll"  href="#works" title="Lavori">Lavori</a></li>
                 <li><a class="smoothscroll"  href="#study" title="Studi">Studi</a></li>
@@ -57,7 +57,7 @@
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
 -->
 
-                <li><a class="smoothscroll"  href="#contact" title="contatti">Contatti</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="Contatti">Contatti</a></li>
 
                 <li><a href="index.html" title="Ing"> <img src="images/bandiera_ing.png"></a></li>
 
