--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <h3>Hello There</h3>
                 <h1>
-                    I am Davide Giagnacovo, <br>
+                    I'm Davide Giagnacovo, <br>
                     a Business Developer & Marketing Specialist.
                     
                 </h1>
@@ -141,11 +141,11 @@
                 <h3>Howdy!</h3>
 
                 <p>
-                Hi, my name is Davide and I'm a Business Developer & Web Marketing Specialist. Increasing Sales is my primary goal.<br>
+                Hi, my name is Davide and I'm a Business Developer & Web Marketing Specialist. For me the main goal is increasing sales.<br>
 
-                I choose this profession because I think that it fits me; I believe that the Web is the best tool to get in touch with customers, therefore I believe that digital marketing is the perfect way to increase Sales.<br><br>
+                I chose this profession because I think it suits me perfectly. In my opinion the Web is the best tool to get in touch with customers, therefore digital marketing is a perfect way to increase Sales.<br><br>
 
-                Everyday I work on my communication with customers and collaboration with my team because, in my opinion, it is the best way to grow professionally and to learn new things. All this allows me to constantly expand and deepen my knowledge. I try to improve and keep up-to-date through a continuous commitment to study.<br><br>
+                In my job I’m focused on the communication with costumers working in teams, which is always a good way to grow professionally and learn new things. Furthermore I like to improve my skills and to expand my knowledge through my propensity to study.<br><br>
 
                 I love everything that means innovation and experimentation.
                 </p>
