--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <h3>Howdy!</h3>
 
                 <p>
-                Hi, my name is Davide and I'm a Business Developer & Web Marketing Specialist. For me the main goal is increasing sales.<br>
+                Hi, my name is Davide and I'm a Business Developer & Web Marketing Specialist. For me the main goal is increasing sales.<br><br>
 
                 I chose this profession because I think it suits me perfectly. In my opinion the Web is the best tool to get in touch with customers, therefore digital marketing is a perfect way to increase Sales.<br><br>
 
@@ -216,7 +216,7 @@
                         </div>
                         <div class="timeline__desc">
                             <p>ACTIVITIES:<br>
-                                ▪ Sale of hardware and software solutions (offers, price sheets etc ...);<br>
+                                ▪ Wholesale of hardware and software solutions (offers, price sheets etc ...);<br>
                                 • Follow up of customers / prospects to achieve commercial objectives;<br>
                                 ▪ Maximization of ROI, through KPI market analysis and SWOT analysis;<br>
                                 ▪ Develop strategic marketing plans and advertising budget management;<br>
