--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
                                 ▪ Wholesale of hardware and software solutions (offers, price sheets etc ...);<br>
                                 • Follow up of customers / prospects to achieve commercial objectives;<br>
                                 ▪ Maximization of ROI, through KPI market analysis and SWOT analysis;<br>
-                                ▪ Develop strategic marketing plans and advertising budget management;<br>
+                                ▪ Developing strategic marketing plans and advertising budget management;<br>
                                 ▪ Identification of new trends and business development opportunities;<br>
                                 ▪ Website SEO analysis (search engine optimization);<br>
                                 • Building long term relationships with customers;<br>
-                                • Team manager for the realization of new projects.</p>
+                                • Team managing for the realization of new projects.</p>
                         </div>
                     </div> <!-- end timeline__block -->
 
@@ -239,7 +239,7 @@
                                 ▪ Realization of commercial offers and interfacing with PosteItaliane commercial;<br>
                                 ▪ First customer reference before and after sale;<br>
                                 ▪ Building long-term relationships with existing customers;<br>
-                                ▪ Communication to customers for the launch of news or promotions;<br>
+                                ▪ Communication with the customers for the launching of news promotions;<br>
                                 ▪ Management of the technical and commercial theme to manage customer needs;<br>
                                 ▪ Cross Selling.</p>
                         </div>
@@ -261,12 +261,12 @@
                         <div class="timeline__desc">    
                             <p>ACTIVITIES:<br>
                                 ▪ Planning, organization and execution of marketing activities;<br>
-                                ▪ Monitor costs and marketing budgets;<br>
+                                ▪ Monitoring costs and marketing budgets;<br>
                                 ▪ Website restyling and SEO analysis;<br>
                                 ▪ Analysis of the performance of marketing activities (Google Adwords and Google Analytics);<br>
                                 ▪ Management and implementation of Direct Email Marketing campaigns;<br>
                                 ▪ CMS and CRS management;<br>
-                                ▪ Develop the marketing plan and the segmentation, targeting and product positioning strategy;<br>
+                                ▪ Developing the marketing plan and the segmentation, targeting and product positioning strategy;<br>
                                 ▪ Design and production of company material (case history, presentations for customers, etc.).</p>
                         </div>
                     </div> <!-- end timeline__block -->
@@ -280,10 +280,10 @@
                         </div>
                         <div class="timeline__desc">
                             <p>ACTIVITIES:<br>
-                                ▪ Research activity for buyers of Italian products abroad (UK, Spain, Shanghai etc ...);<br>
+                                ▪ Research companies interested in buying Italian products (UK, Spain, Shanghai etc ...);<br>
                                 ▪ InSale Commercial Activity: creation of commercial offers;<br>
-                                ▪ Market and competition analysis
-                                ▪ Realization of communicative material with graphic tools;<br>
+                                ▪ Market and competition analysis;<br>
+                                ▪ Realization of communication materials through graphic tools;<br>
                                 ▪ Native speaker team management for interfacing with foreign customers (4/6 resources);<br>
                                 ▪ Training activities for new resources.</p>
                         </div>
@@ -609,7 +609,7 @@
 
         <div class="row testimonials-header">
             <div class="col-full">
-                <h1 class="h02">What People Say.</h1>
+                <h1 class="h02">What People Say About Me.</h1>
             </div>
         </div>
 
@@ -629,7 +629,7 @@
                 <div class="testimonials__slide">
                     <img src="images/avatars/Antonio_Laraspata_img.jpg" alt="Author image" class="testimonials__avatar">
                     <p>
-                    Davide is an inspiring, skilled, and proactive marketing expert. I’ve had the opportunity to have some extremely useful exchanges throughout my time at Hitech srl. Not only he is a very well-prepared colleague, but also a great friend, always positive and kind. Keep it up Davide!</p>
+                    Davide is an inspiring, skilled, and proactive marketing expert. I’ve had the opportunity to have some extremely useful exchanges with him at Hitech srl. Not only he is a very well-prepared colleague, but also a great friend, always positive and kind. Keep it up Davide!</p>
                     <div class="testimonials__author h06">
                         Antonio Laraspata
                         <span>Consulting Associate, Cognizant</span>
@@ -648,7 +648,7 @@
                 <div class="testimonials__slide">
                     <img src="images/avatars/Francesco_Costanza_img.jpg" alt="Author image" class="testimonials__avatar">
                     <p>I had the pleasure of working with Davide at OneNet srl.<br>
-                    He has a strong commercial mentality and an excellent ability to interface with customers.</p>
+                    He has a strong commercial mentality and an excellent ability to interact with customers.</p>
                     <div class="testimonials__author h06">
                         Francesco Costanza
                         <span>Key Account Manager, OneNet Srl</span>
