--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Davide Resume WebSite</title>
+    <title>Davide - Resume WebSite</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -48,16 +48,16 @@
 
         <nav class="header-nav-wrap">
             <ul class="header-nav">
-                <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
-                <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll"  href="#works" title="works">Works</a></li>
-                <li><a class="smoothscroll"  href="#study" title="study">Study</a></li>
+                <li class="current"><a class="smoothscroll"  href="#home" title="Home">Home</a></li>
+                <li><a class="smoothscroll"  href="#about" title="About">About</a></li>
+                <li><a class="smoothscroll"  href="#works" title="Works">Works</a></li>
+                <li><a class="smoothscroll"  href="#education" title="Education">Education</a></li>
                 <li><a class="smoothscroll"  href="#soft_skills" title="Skills">Soft Skills</a></li>
 <!--
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
 -->
 
-                <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
+                <li><a class="smoothscroll"  href="#contact" title="Contact">Contact</a></li>
 
                 <li><a href="index_ita.html" title="Ita"> <img src="images/bandiera_ita.png"></a></li>
 
@@ -318,12 +318,12 @@
 <!--fine barra di divisione tra lavoro e studio --> 
 
 <!-- start study -->    
-    <section id="study" class="s-about target-section"> 
+    <section id="education" class="s-about target-section"> 
 
         <div class="row about-content about-content--timeline">
 
             <div class="col-full text-center">
-                <h3>My Study.</h3>
+                <h3>My Education.</h3>
             </div>
 
             <div class="col-six tab-full left">
