--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="timeline__desc">
                             <p>ACTIVITIES:<br>
                                 ▪ Wholesale of hardware and software solutions (offers, price sheets etc ...);<br>
-                                • Follow up of customers / prospects to achieve commercial objectives;<br>
+                                ▪ Follow up of customers / prospects to achieve commercial objectives;<br>
                                 ▪ Maximization of ROI, through KPI market analysis and SWOT analysis;<br>
                                 ▪ Developing strategic marketing plans and advertising budget management;<br>
                                 ▪ Identification of new trends and business development opportunities;<br>
