--- a/index_ita.html
+++ b/index_ita.html
@@ -228,7 +228,7 @@
                         <div class="timeline__desc">
                             <p>ATTIVITÀ:<br>
                                 ▪ Vendita di soluzioni hardware e software con approccio consulenziale (offerte, schede prezzi ecc ...);<br>
-                                • Follow up dei clienti/prospect per il raggiungimento degli obiettivi commerciali;<br>
+                                ▪ Follow up dei clienti/prospect per il raggiungimento degli obiettivi commerciali;<br>
                                 ▪ Massimizzazione del ROI, attraverso analisi di mercato KPI e analisi SWOT;<br>
                                 ▪ Sviluppare piani di marketing strategico e gestione del Budget dedicato;<br>
                                 ▪ Identificazione di nuovi trend e opportunità di sviluppo del business;<br>
