--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Davide - Resume WebSite</title>
+    <title>Davide Giagnacovo - Resume WebSite</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
