--- a/index_ita.html
+++ b/index_ita.html
@@ -21,7 +21,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Davide - CV WebSite</title>
+    <title>Davide Giagnacovo - CV WebSite</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
