--- a/index.html
+++ b/index.html
@@ -36,8 +36,17 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Davide Giagnacovo - Resume WebSite</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Davide Giagnacovo - Resume WebSite">
+    <meta name="author" content="Davide Giagancovo">
+
+	<!--- facebook open graph
+    ================================================== -->
+
+    <meta property="og:url"content="https://davidegiagnacovo.com" />
+	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
+	<meta property="og:description" content="Description: Davide Giagnacovo - Resume WebSite" />
+	<meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.png" />
+
 
     <!-- mobile specific metas
     ================================================== -->
