--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <meta property="og:url"content="https://www.davidegiagnacovo.com" />
 	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
 	<meta property="og:description" content="Description: Davide Giagnacovo - Resume WebSite" />
-	<meta property="og:image" content="https://www.davidegiagnacovo.com/immagine sociale.png" />
+	<meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.png" />
 
 
     <!-- mobile specific metas
