--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 	<!--- facebook open graph
     ================================================== -->
 
-    <meta property="og:url"content="https://www.davidegiagnacovo.com" />
+    <meta property="og:url"content="http://www.davidegiagnacovo.com" />
 	<meta property="og:title" content="Davide Giagnacovo - Resume WebSite" />
 	<meta property="og:description" content="Description: Davide Giagnacovo - Resume WebSite" />
-	<meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.png" />
+	<meta property="og:image" content="http://www.davidegiagnacovo.com/immagine sociale.png" />
 
 
     <!-- mobile specific metas
