--- a/index_ita.html
+++ b/index_ita.html
@@ -35,8 +35,16 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Davide Giagnacovo - CV WebSite</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Davide Giagnacovo - CV WebSite">
+    <meta name="author" content="Davide Giagancovo">
+
+    <!--- facebook open graph
+    ================================================== -->
+
+    <meta property="og:url"content="https://davidegiagnacovo.com/index_ita.html" />
+    <meta property="og:title" content="Davide Giagnacovo - CV WebSite" />
+    <meta property="og:description" content="Salve, sono Davide Giagnacovo e questo è il mio sito web. Scopri le mie esperienze e le mie skills, sono certo che ti piaceranno." />
+    <meta property="og:image" content="https://davidegiagnacovo.com/immagine sociale.png" />
 
     <!-- mobile specific metas
     ================================================== -->
