--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Davide Giagnacovo - Resume WebSite</title>
-    <meta name="description" content="Davide Giagnacovo - Resume WebSite">
+    <meta name="description" content="Howdy, I'm Davide Giagnacovo and this is my resume website. Discover my experiences and my skills, I'm sure you will like them.">
     <meta name="author" content="Davide Giagancovo">
 
 	<!--- facebook open graph
