--- a/index_ita.html
+++ b/index_ita.html
@@ -35,7 +35,7 @@
     ================================================== -->
     <meta charset="utf-8">
     <title>Davide Giagnacovo - CV WebSite</title>
-    <meta name="description" content="Davide Giagnacovo - CV WebSite">
+    <meta name="description" content="Salve, sono Davide Giagnacovo e questo è il mio sito web. Scopri le mie esperienze e le mie skills, sono certo che ti piaceranno.">
     <meta name="author" content="Davide Giagancovo">
 
     <!--- facebook open graph
