--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <a href="https://www.linkedin.com/in/davidegiagnacovo" target="_blank"><i class="im im-linkedin" aria-hidden="true"></i><span>Linkedin</span></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/davide.giagnacovo" target="_blank"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="facebook.com/davide.giagnacovo" target="_blank"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
                 <a href="https://www.instagram.com/ilgiag/" target="_blank"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
